Missed closing info-container div. White space under footer resolved.

--- a/style.css
+++ b/style.css
@@ -1,17 +1,21 @@
-
+* {
+    margin: 0;
+    padding: 0;
+}
 
 body {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
+    
+   
 }
 
 img {
     width: 150px;
     height: auto;
+    flex-grow: 1;
 }
 
 .header {
@@ -21,6 +25,8 @@ img {
     flex-direction: column;
     color: white;
     margin-bottom: 100px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 ul {
@@ -35,9 +41,9 @@ a {
 
 }
 
-.navbar {
+nav {
     display: flex;
-    
+    flex: 1;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 100px;
@@ -93,12 +99,15 @@ img {
     display: flex;
     flex-grow: 1;
     margin-bottom: 10px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 .info-container {
     display: flex;
     flex-direction: column;
     margin-bottom: 100px;
+    
 }
 
 .information {
@@ -109,15 +118,21 @@ img {
     justify-content: center;
     align-items: center;
     margin-bottom: 50px;
-    
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 .imgs {
     display: flex;
-    justify-content: space-around;
-    flex: auto;
-    gap: 10px;
+    justify-content: center;
+    gap: 50px;
     margin-bottom: 50px;
+
+}
+
+.pancake {
+    flex-grow: 2;
+    
 }
 
 .info {
@@ -139,6 +154,8 @@ img {
     background-color: #e5e7eb;
     flex-direction: column;
     padding: 100px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 .quote {
@@ -197,11 +214,13 @@ img {
 }
 
 footer {
-    padding: 30px;
+    padding: 0;
     background-color: #1f2937;
     display: flex;
     color: white;
     justify-content: center;
+    height: 100px;
+    align-items: center;
 }
 
 
